force-app/main/default/objects/Bank_Account__c/Bank_Account__c.object-meta.xml
<CustomObject>
    <description>Bank account on file for an Offering's GP entity or other DPEG banking relationship, used to hold routing/account details for capital movement.</description>
    <label>Bank Account</label>
    <nameField>
        <label>Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>