force-app/main/default/objects/Bank_Account__c/fields/Account_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Account_Nickname__c</fullName>
    <description>Friendly, human-readable nickname for this bank account, used to distinguish it from other accounts on the same Offering or GP entity.</description>
    <inlineHelpText>A short name to help identify this account at a glance, e.g. "Ops Checking".</inlineHelpText>
    <label>Account Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>