force-app/main/default/objects/Bank_Account__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Bank account number for this bank account. Stored as plain Text per design decision D5 — not encrypted.</description>
    <inlineHelpText>Enter the account number exactly as provided by the bank.</inlineHelpText>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>