force-app/main/default/objects/Bank_Account__c/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <description>Legal name of the entity that owns this bank account, as it appears on the bank's records.</description>
    <inlineHelpText>Enter the account-holder entity name exactly as it appears on the bank statement.</inlineHelpText>
    <label>Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>