force-app/main/default/objects/Bank_Account__c/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <description>Bank routing number (ABA number) for this bank account. Stored as plain Text per design decision D5 — not encrypted.</description>
    <inlineHelpText>Enter the 9-digit ABA routing number exactly as provided by the bank.</inlineHelpText>
    <label>Routing #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>