force-app/main/default/objects/Bank_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Nickname__c</columns>
    <columns>Entity_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>